# WinterMist

./: .gitignore  README.md  main.py  pyproject.toml
backend/api/: urls.py  views.py
backend/home/: settings.py  urls.py
backend/products/: forms.py  models.py  serializers.py  urls.py  views.py
py_client/: base.py  detail.py  list.py  testall.py
